--- a/subpage/autumn_sub1.html
+++ b/subpage/autumn_sub1.html
@@ -42,18 +42,20 @@
           </div>
           <div class="sp2-subTri1"></div>
           <div class="sp2-subInf1">
-            <b style="font-size: 1.6rem;">금강산</b><br><br>
-            많은 사람들은 금강산의 꽃은 가을에서 난다라고들 말한다.
-            그 이유는 가을에 단풍이 가득한 풍악산에서 특히, 높은 산에서 단풍과
-            함께 푸른 하늘을 바라보면 그만한 경치가 없다.
+            <b style="font-size: 1.6rem; font-weight: bold">금강산</b
+            ><br /><br />
+            많은 사람들은 금강산의 꽃은 가을에서 난다라고들 말한다. 그 이유는
+            가을에 단풍이 가득한 풍악산에서 특히, 높은 산에서 단풍과 함께 푸른
+            하늘을 바라보면 그만한 경치가 없다.
           </div>
         </div>
         <div class="sp2-subBox2">
           <div class="sp2-subInf2">
-            <b style="font-size: 1.6rem;">남이섬</b><br><br>
-            단풍나무와 은행나무가 물들어가고 그 사이에서 시원한 바람을
-            맞을수 있고 근처에 양떼목장이나 핑크뮬리도 아름답게 펼쳐있어
-            더욱 사랑을 받는다.
+            <b style="font-size: 1.6rem; font-weight: bold">남이섬</b
+            ><br /><br />
+            단풍나무와 은행나무가 물들어가고 그 사이에서 시원한 바람을 맞을수
+            있고 근처에 양떼목장이나 핑크뮬리도 아름답게 펼쳐있어 더욱 사랑을
+            받는다.
           </div>
           <div class="sp2-subTri2"></div>
           <div class="sp2-subImg2">
@@ -66,21 +68,22 @@
           </div>
           <div class="sp2-subTri3"></div>
           <div class="sp2-subInf3">
-            <b style="font-size: 1.6rem;">한강공원</b><br><br>
-            한강을 바라보며 시원한 바람을 맞으며 산책을 하거나
-            돗자리를 깔고 피크닉을 하는 등 가족,연인,친구와 함께 하는 여행에서
-            가을에 한강만한 게 없다.
+            <b style="font-size: 1.6rem; font-weight: bold">한강공원</b
+            ><br /><br />
+            한강을 바라보며 시원한 바람을 맞으며 산책을 하거나 돗자리를 깔고
+            피크닉을 하는 등 가족,연인,친구와 함께 하는 여행에서 가을에 한강만한
+            게 없다.
           </div>
         </div>
         <div class="sp2-subBox4">
           <div class="sp2-subInf4">
-            <b style="font-size: 1.6rem;">부산</b><br><br>
-            광활한 광안리해수욕장 앞에서 펼쳐지는 부산 불꽃축제와 전 세계 문화인들이
-            모여서 영화로 하나가 될 수 있는 부산국제영화제가 그 예이다.
+            <b style="font-size: 1.6rem; font-weight: bold">부산</b><br /><br />
+            광활한 광안리해수욕장 앞에서 펼쳐지는 부산 불꽃축제와 전 세계
+            문화인들이 모여서 영화로 하나가 될 수 있는 부산국제영화제가 그
+            예이다.
             <br /><br />바다 위에서 펼쳐지는 불꽃놀이와 드론 쇼, 유명한 배우와
             한국에서 출시하지 않은 작품성 있는 독립영화 등 많은 것을 관람할 수
             있다.
-
           </div>
           <div class="sp2-subTri4"></div>
           <div class="sp2-subImg4">
