--- a/subpage/autumn_sub2.html
+++ b/subpage/autumn_sub2.html
@@ -36,14 +36,26 @@
 
       <!-- 본문 -->
       <div class="sp3-galBox1">
-        <div class="sp3-galImgBox" data-index="1"></div>
-        <div class="sp3-galImgBox" data-index="2"></div>
-        <div class="sp3-galImgBox" data-index="3"></div>
+        <div class="sp3-galImgBox" data-index="1">
+          <img src="../img/autumn/가을야구.jpg" />
+        </div>
+        <div class="sp3-galImgBox" data-index="2">
+          <img src="../img/autumn/추석.jpg" />
+        </div>
+        <div class="sp3-galImgBox" data-index="3">
+          <img src="../img/autumn/수능.jpg" />
+        </div>
       </div>
       <div class="sp3-galBox2">
-        <div class="sp3-galImgBox" data-index="4"></div>
-        <div class="sp3-galImgBox" data-index="5"></div>
-        <div class="sp3-galImgBox" data-index="6"></div>
+        <div class="sp3-galImgBox" data-index="4">
+          <img src="../img/autumn/한글날.jpg" />
+        </div>
+        <div class="sp3-galImgBox" data-index="5">
+          <img src="../img/autumn/독서.jpg" />
+        </div>
+        <div class="sp3-galImgBox" data-index="6">
+          <img src="../img/autumn/할로윈.jpg" />
+        </div>
       </div>
     </section>
     <!-- -------------------------------- -->
