--- a/subpage/autumn.html
+++ b/subpage/autumn.html
@@ -65,7 +65,7 @@
     <section class="sp1-sec3">
       <div class="sp1-sec3-top">
         <div class="sp1-sec3-api">
-            <span>현재 한국 날씨</span>
+          <span>현재 한국 날씨</span>
           <div>
             <span>기온 : </span>
             <span id="temp"></span>
@@ -80,12 +80,16 @@
           </div>
         </div>
         <div class="sp1-sec3-text">
-          가을은 일 평균 기온이 22도 이하로 떨어지고 일교차가 적어 최고 기온이 치솟인 일이 드물다.<br>
-          또한 맑은 하늘을 볼 수 있는 얼마 안되는 시기 중 하나다. <br>
+          가을은 일 평균 기온이 22도 이하로 떨어지고 일교차가 적어 최고 기온이
+          치솟인 일이 드물다.<br />
+          또한 맑은 하늘을 볼 수 있는 얼마 안되는 시기 중 하나다. <br />
           하지만 하루 사이에 날씨가 갑자기 추워지는 날도 종종 있다.
         </div>
       </div>
-      <div class="sp1-sec3-graph"></div>
+      <div class="sp1-sec3-graph">
+        <div>연도별 가을 평균 기온</div>
+        <div></div>
+      </div>
     </section>
     <section class="sp1-sec4">
       <div>날씨 따라 완성하는 가을 코디</div>
