--- a/subpage/spring_sub1.html
+++ b/subpage/spring_sub1.html
@@ -8,8 +8,8 @@
     />
     <title>봄날의 즐거움</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="../style/season-layout.css" />
-    <link rel="stylesheet" href="../style/season-sub.css" />
+    <link rel="stylesheet" href="../style/spring.css" />
+    <link rel="stylesheet" href="../style/springSub.css" />
     <link rel="stylesheet" href="../style/style.css" />
   </head>
   <body>
@@ -36,31 +36,64 @@
       <div class="sp2-mainBox1">
         <div class="sp2-subBox1">
           <div class="sp2-subImg1">
-            관광지 사진1
-            <div class="sp2-tr-design"></div>
+            <img src="../img/spring-sub1/springSub2-place1.webp">
           </div>
           <div class="sp2-subTri1"></div>
-          <div class="sp2-subInf1">관광지 사진1 설명</div>
+          <div class="sp2-subInf1">
+            <span class="sp2-subTrtit">통영<br></span>
+            <span>
+              깊은 남해에 둘러쌓인 통영 여행 어떠신가요?<br>
+              소매물도 또는 서피랑에 올라 풍경을 내려다보거나, <br>
+              통영 루지를 타고 스릴을 즐기다 보면 스트레스가 저절로 풀릴거에요. <br>
+              봄에 맛볼 수 있는 통영의 별미, 도다리쑥국도 꼭 드셔보세요! <br>
+              봄을 한입 가득 먹는 맛을 느낄수 있답니다.
+            </span>
+          </div>
         </div>
+
         <div class="sp2-subBox2">
-          <div class="sp2-subInf2">관광지 사진2 설명</div>
+          <div class="sp2-subInf2">
+            <span class="sp2-subTrtit">제주<br></span>
+            <span>
+              온화한 봄바람이 반기는 제주도 여행 어떠신가요? <br>
+              초봄에는 아직 떨어지지 않은 동백꽃을, 온연한 봄에는 벚꽃과 유채꽃을, 늦봄에는 수국까지 만날 수 있어요. <br>
+              철마다 다양한 꽃과 나무를 볼 수 있는 한림공원이나 독특한 월령리 선인장군락지도 추천한다
+            </span>
+          </div>
           <div class="sp2-subTri2"></div>
           <div class="sp2-subImg2">
-            <div class="sp2-tr-design on"></div>
+            <img src="../img/spring-sub1/springSub2-place2.jpg">
           </div>
         </div>
+
         <div class="sp2-subBox3">
           <div class="sp2-subImg3">
-            <div class="sp2-tr-design"></div>
+            <img src="../img/spring-sub1/springSub2-place3.png">
           </div>
           <div class="sp2-subTri3"></div>
-          <div class="sp2-subInf3">관광지 사진3 설명</div>
+          <div class="sp2-subInf3">
+            <span class="sp2-subTrtit">강화도<br></span>
+            <span>
+              서울과 가까워 교통이 편리한 강화도 여행을 추천드립니다! <br>
+              분위기 좋은 카페가 많아 데이트하기에 좋고,<br> 
+              진달래 군락이 아름다운 고려산 등반도 추천드립니다. <br>
+              등산로가 잘 정비되어 있어 부담 없이 오를 수 있어요!
+            </span>
+          </div>
         </div>
+
         <div class="sp2-subBox4">
-          <div class="sp2-subInf4">관광지 사진4 설명</div>
+          <div class="sp2-subInf4">
+            <span class="sp2-subTrtit">제천 천풍호<br></span>
+            <span>
+              충주댐 건설로 만들어진 청풍호, ‘내륙의 바다’라 불릴 만큼 넓은 인공호수예요. <br>
+              비봉산과 연결된 청풍호 관광 모노레일을 타고 정상에서 아름다운 풍경을 감상해 보세요!<br>
+              스릴을 원한다면 청풍호반 케이블카 투명 캐빈도 추천해요!
+            </span>
+          </div>
           <div class="sp2-subTri4"></div>
           <div class="sp2-subImg4">
-            <div class="sp2-tr-design on"></div>
+            <img src="../img/spring-sub1/springSub2-place4.jpg">
           </div>
         </div>
       </div>
@@ -73,24 +106,48 @@
       <!-- 본문 -->
       <div class="sp2-mainBox2">
         <div class="sp2-foodBox1">
-          <div class="sp2-foodImg1"></div>
-          <div class="sp2-foodTit1"></div>
-          <div class="sp2-foodInf1"></div>
+          <div class="sp2-foodImg1">
+            <img src="../img/spring-sub1/sp2-foodImg1-dal.jpg" alt="달래">
+          </div>
+          <div class="sp2-foodTit1">달래</div>
+          <div class="sp2-foodInf1">
+            봄을 알리는 대표적인 봄나물로, 특유의 톡 쏘는 매운맛이 매력적이에요. <br>
+            이른 봄, 들판과 논길을 따라 무리 지어 자라며, 매콤하게 무쳐 먹거나 된장찌개에 넣어도 훌륭하죠.
+            싱그러운 봄 향기를 가득 품은 이 나물, 봄 식탁에 꼭 올려보세요!
+          </div>
         </div>
         <div class="sp2-foodBox2">
-          <div class="sp2-foodImg2"></div>
-          <div class="sp2-foodTit2"></div>
-          <div class="sp2-foodInf2"></div>
+          <div class="sp2-foodImg2">
+            <img src="../img/spring-sub1/sp2-foodImg1-si.jpg" alt="시금치">
+          </div>
+          <div class="sp2-foodTit2">시금치</div>
+          <div class="sp2-foodInf2">
+            비타민과 미네랄이 풍부한 시금치, 세계 10대 채소로도 불리는 영양 가득한 봄 채소예요. 
+            무쳐 먹고, 쪄 먹고, 삶아 먹는 등 다양한 조리법으로 즐길 수 있죠.
+            제철을 맞이해 영양이 가득찬 시금치, 봄철 건강식으로 딱이에요!
+          </div>
         </div>
         <div class="sp2-foodBox3">
-          <div class="sp2-foodImg3"></div>
-          <div class="sp2-foodTit3"></div>
-          <div class="sp2-foodInf3"></div>
+          <div class="sp2-foodImg3">
+            <img src="../img/spring-sub1/sp2-foodImg1-cra.jpg" alt="봄꽃게">
+          </div>
+          <div class="sp2-foodTit3">봄꽃게</div>
+          <div class="sp2-foodInf3">
+            봄꽃게, 산란기 전에 수확한 암꽃게가 제일 맛있다고 해요.
+            겨울잠을 자던 꽃게가 3월부터 활동을 시작하며, 서해안으로 올라와 영양분을 섭취하면서 살이 꽉 차게 돼요.
+            5월쯤 되면 살도 풍부하고 알까지 가득 찬 가장 맛있는 꽃게가 등장한답니다!
+          </div>
         </div>
         <div class="sp2-foodBox4">
-          <div class="sp2-foodImg4"></div>
-          <div class="sp2-foodTit4"></div>
-          <div class="sp2-foodInf4"></div>
+          <div class="sp2-foodImg4">
+            <img src="../img/spring-sub1/sp2-foodImg1-han.jpg" alt="한라봉">
+          </div>
+          <div class="sp2-foodTit4">한라봉</div>
+          <div class="sp2-foodInf4">
+            한라봉, 제주를 대표하는 과일로, 오렌지보다 거친 껍질과 높은 당도가 특징이에요. 
+            육질이 부드럽고 즙이 많아 주스, 셰이크, 셔벗 등 향긋한 음료부터 잼, 마멀레이드까지 다양하게 활용할 수 있어요.
+            달콤한 한라봉으로 싱그러운 맛을 즐겨보세요!
+          </div>
         </div>
       </div>
     </section>
@@ -102,20 +159,20 @@
         <div class="sp2-sec3-con-img1">
           <div class="sp2-sec3-con-img1-opacity-con">
             <div class="sp2-sec3-con-img1-opacity-con-in-con">
-              <span>눈을 감아도 지워지지 않는 최적의 공간</span>
-              <span>산토리니의 하늘</span>
-              <span>쏠비치 삼척</span>
-              <span>SOL BEACH SAMCHEOK</span>
+              <span>향긋한 유채꽃향을 한가득 머금은</span>
+              <span>삼척</span>
+              <span>유채꽃축제</span>
+              <span>SAMCHEOK FESTIVAL</span>
             </div>
           </div>
         </div>
         <div class="sp2-sec3-con-img2">
           <div class="sp2-sec3-con-img1-opacity-con">
             <div class="sp2-sec3-con-img1-opacity-con-in-con">
-              <span>눈을 감아도 지워지지 않는 최적의 공간</span>
-              <span>산토리니의 하늘</span>
-              <span>쏠비치 삼척</span>
-              <span>SOL BEACH SAMCHEOK</span>
+              <span>화려한 꽃들이 흐트러지게 피어있는</span>
+              <span>Colorful Garden </span>
+              <span>자라섬 꽃 페스타</span>
+              <span>JARASOM FLOWER FESTA</span>
             </div>
           </div>
         </div>
@@ -227,6 +284,28 @@
         </div>
       </div>
     </section>
+        <!-- footer 부분 -->
+        <footer>
+          <span>이 페이지는 학습 및 포트폴리오를 위해 제작되었습니다</span>
+          <div class="hi-footerBox">
+            <div class="hi-figmaBox">
+              <a href="https://www.figma.com/design/599GWSnvNaoEHdQ0H3iW6G/TouristWebsite_Design?node-id=0-1&p=f&t=E0qoQzzdOEmYrA6V-0" target="_blank">
+                <img
+                  src="../img/icon/linkImg.png"
+                  alt="피그마 링크"
+                  class="hi-footerIcon"
+                />
+                <span class="hi-footerSubtxt">Page design with Figma</span>
+              </a>
+            </div>
+            <div class="hi-downBox">
+              <a href="../img/기획서양식_저기만이기조.pdf" download>
+                <img src="../img/icon/downloadImg.png" alt="기획서 다운로드" class="hi-footerIcon" />
+                <span class="hi-footerSubtxt">기획서 다운로드 하기</span>
+              </a>
+            </div>
+          </div>
+        </footer>
     <!-- ------------------------------------- -->
   </body>
   <script src="../js/subMenuTab.js"></script>
