--- a/subpage/summer.html
+++ b/subpage/summer.html
@@ -97,7 +97,7 @@
         </div>
       </div>
       <div class="sp1-sec3-graph">
-        <div>연도별 봄 평균 기온</div>
+        <div>연도별 여름 평균 기온</div>
         <div></div>
       </div>
     </section>
@@ -245,5 +245,6 @@
     <script src="../js/canvas.js"></script>
     <script src="../js/spring.js"></script>
     <script src="../js/subMenuTab.js"></script>
+    <script src="../js/summer_sub2.js"></script>
   </body>
 </html>
