--- a/subpage/summer_sub2.html
+++ b/subpage/summer_sub2.html
@@ -9,6 +9,7 @@
     <title>갤러리</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="../style/season-layout.css" />
+    <link rel="stylesheet" href="../style/summer.css  " />
     <link rel="stylesheet" href="../style/season-sub.css" />
     <link rel="stylesheet" href="../style/style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -46,7 +47,7 @@
         <div class="sp3-galImgBox" data-index="6"></div>
       </div>
     </section>
-    <!-- -------------------------------- -->
+    <!-- ---------------------------------->
     <!-- 탭메뉴 -->
     <section id="hi-mainMenu-web" class="hideMenu">
       <div>
@@ -152,7 +153,7 @@
         </div>
       </div>
     </section>
-    <!-- ------------------------------------- -->
+    <!----------------------------------------->
 
     <!-- 모달 -->
     <div id="modal" class="modal">
@@ -162,7 +163,7 @@
         <div class="modal-text">이미지에 대한 설명</div>
       </div>
     </div>
-    <script src="../js/spring_sub2.js"></script>
+    <script src="../js/summer_sub2.js"></script>
   </body>
   <script src="../js/subMenuTab.js"></script>
 </html>
