--- a/subpage/spring_sub1.html
+++ b/subpage/spring_sub1.html
@@ -44,9 +44,7 @@
             <span>
               깊은 남해에 둘러쌓인 통영 여행 어떠신가요?<br>
               소매물도 또는 서피랑에 올라 풍경을 내려다보거나, <br>
-              통영 루지를 타고 스릴을 즐기다 보면 스트레스가 저절로 풀릴거에요. <br>
-              봄에 맛볼 수 있는 통영의 별미, 도다리쑥국도 꼭 드셔보세요! <br>
-              봄을 한입 가득 먹는 맛을 느낄수 있답니다.
+              통영 루지를 타고 스릴을 즐기다 보면<br> 스트레스가 저절로 풀릴거에요. 
             </span>
           </div>
         </div>
@@ -56,8 +54,8 @@
             <span class="sp2-subTrtit">제주<br></span>
             <span>
               온화한 봄바람이 반기는 제주도 여행 어떠신가요? <br>
-              초봄에는 아직 떨어지지 않은 동백꽃을, 온연한 봄에는 벚꽃과 유채꽃을, 늦봄에는 수국까지 만날 수 있어요. <br>
-              철마다 다양한 꽃과 나무를 볼 수 있는 한림공원이나 독특한 월령리 선인장군락지도 추천한다
+              초봄에는 아직 떨어지지 않은 동백꽃을,<br> 온연한 봄에는 벚꽃과 유채꽃을, 늦봄에는 <br>수국까지 만날 수 있어요. <br>
+              철마다 다양한 꽃과 나무를 볼 수 있는<br>한림공원이나 독특한 월령리 선인장군락지도 추천해요.
             </span>
           </div>
           <div class="sp2-subTri2"></div>
@@ -74,7 +72,7 @@
           <div class="sp2-subInf3">
             <span class="sp2-subTrtit">강화도<br></span>
             <span>
-              서울과 가까워 교통이 편리한 강화도 여행을 추천드립니다! <br>
+              서울과 가까워 교통이 편리한 <br>강화도 여행을 추천드립니다! <br>
               분위기 좋은 카페가 많아 데이트하기에 좋고,<br> 
               진달래 군락이 아름다운 고려산 등반도 추천드립니다. <br>
               등산로가 잘 정비되어 있어 부담 없이 오를 수 있어요!
@@ -86,9 +84,9 @@
           <div class="sp2-subInf4">
             <span class="sp2-subTrtit">제천 천풍호<br></span>
             <span>
-              충주댐 건설로 만들어진 청풍호, ‘내륙의 바다’라 불릴 만큼 넓은 인공호수예요. <br>
-              비봉산과 연결된 청풍호 관광 모노레일을 타고 정상에서 아름다운 풍경을 감상해 보세요!<br>
-              스릴을 원한다면 청풍호반 케이블카 투명 캐빈도 추천해요!
+              충주댐 건설로 만들어진 청풍호,<br> ‘내륙의 바다’라 불릴 만큼 넓은 인공호수예요. <br>
+              비봉산과 연결된 청풍호 관광 모노레일을 타고 정상에서 <br>아름다운 풍경을 감상해 보세요!<br>
+              스릴을 원한다면, <br>청풍호반 케이블카 투명 캐빈도 추천해요!
             </span>
           </div>
           <div class="sp2-subTri4"></div>
