--- a/subpage/spring_sub1.html
+++ b/subpage/spring_sub1.html
@@ -174,9 +174,11 @@
             <div><a href="../subpage/winter.html">Winter</a></div>
             <div>
               <ul>
-                <li><a href="../subpage/spring.html">한국의 겨울</a></li>
-                <li><a href="../subpage/spring.html">겨울날의 즐거움</a></li>
-                <li><a href="../subpage/spring.html">갤러리</a></li>
+                <li><a href="../subpage/winter.html">한국의 겨울</a></li>
+                <li>
+                  <a href="../subpage/winter_sub1.html">겨울날의 즐거움</a>
+                </li>
+                <li><a href="../subpage/winter_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
