--- a/subpage/summer_sub1.html
+++ b/subpage/summer_sub1.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0,minimum-scale=1.0"
     />
-    <title>봄날의 즐거움</title>
+    <title>여름의 즐거움</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="../style/summer.css" />
     <link rel="stylesheet" href="../style/season-layout.css" />
@@ -198,9 +198,9 @@
             <div><a href="../subpage/winter.html">Winter</a></div>
             <div>
               <ul>
-                <li><a href="../subpage/spring.html">한국의 겨울</a></li>
-                <li><a href="../subpage/spring.html">겨울날의 즐거움</a></li>
-                <li><a href="../subpage/spring.html">갤러리</a></li>
+                <li><a href="../subpage/winter.html">한국의 겨울</a></li>
+                <li><a href="../subpage/winter_sub1.html">겨울날의 즐거움</a></li>
+                <li><a href="../subpage/winter_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
