--- a/subpage/winter_sub1.html
+++ b/subpage/winter_sub1.html
@@ -6,7 +6,251 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0,minimum-scale=1.0"
     />
-    <title>Document</title>
+    <title>겨울의 즐거움</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="../style/winter.css" />
+    <link rel="stylesheet" href="../style/season-layout.css" />
+
+    <link rel="stylesheet" href="../style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="sp1-nav">
+        <div class="sp1-imgLogo">
+          <a href="../index.html">
+            <div class="onuriLogo"></div>
+          </a>
+        </div>
+        <ul class="sp1-navMenu">
+          <li><a class="mb-br" href="./winter.html">한국의 겨울</a></li>
+          <li><a class="mb-br" href="./winter_sub1.html">겨울의 즐거움</a></li>
+          <li><a class="mb-br" href="./winter_sub2.html">갤러리</a></li>
+        </ul>
+        <div class="sp1-hamBar"></div>
+      </div>
+    </header>
+    <!-- 봄에 가면 좋은 관광지 -->
+    <section class="sp2-section1">
+      <!-- 제목 -->
+      <div class="sp2-subTit1">겨울에 가면 좋은 관광지</div>
+      <!-- 본문 -->
+      <div class="sp2-mainBox1">
+        <div class="sp2-subBox1">
+          <div class="sp2-subImg1" id="su-sub1-sp2-subImg1"></div>
+          <div class="sp2-subTri1"></div>
+          <div class="sp2-subInf1">
+            <span class="sp2-subInf-span">겨울 비발디파크</span>
+            비발디파크는 강원도 홍천의 사계절 리조트로, 수도권에서 가까운 겨울
+            스포츠 명소이다.
+          </div>
+        </div>
+        <div class="sp2-subBox2">
+          <div class="sp2-subInf2">
+            <span class="sp2-subInf-span">겨울 양떼목장</span>
+            겨울의 양떼목장은 눈 덮인 목초지와 귀여운 양들이 어우러져 동화 같은
+            풍경을 선사하며, 설경 속에서 양들에게 건초를 주는 체험과 사진 명소로
+            인기가 많다.
+          </div>
+          <div class="sp2-subTri2"></div>
+          <div class="sp2-subImg2" id="su-sub1-sp2-subImg2"></div>
+        </div>
+        <div class="sp2-subBox3">
+          <div class="sp2-subImg3" id="su-sub1-sp2-subImg3"></div>
+          <div class="sp2-subTri3"></div>
+          <div class="sp2-subInf3">
+            <span class="sp2-subInf-span">오대산 국립공원</span>
+            겨울철 오대산은 눈 덮인 숲과 고요한 산 속에서 힐링과 트레킹을
+            즐기기에 좋은 장소로, 차가운 공기 속에서 마음의 평화를 찾을 수 있다.
+          </div>
+        </div>
+        <div class="sp2-subBox4">
+          <div class="sp2-subInf4">
+            <span class="sp2-subInf-span">경주 보문호수</span>
+            경주 보문호수는 겨울에도 하얀 눈에 덮인 환상적인 풍경을 자랑하며,
+            조용한 분위기 속에서 산책과 자연 감상을 즐길 수 있는 명소이다.
+          </div>
+          <div class="sp2-subTri4"></div>
+          <div class="sp2-subImg4" id="su-sub1-sp2-subImg4"></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 이 계절에 먹으면 좋은 음식 -->
+    <section class="sp2-section2">
+      <!-- 제목 -->
+      <div class="sp2-subTit2">겨울에 먹으면 좋은 음식</div>
+      <!-- 본문 -->
+      <div class="sp2-mainBox2">
+        <div class="sp2-foodBox1">
+          <div class="sp2-foodImg1" id="su-sub1-sp2-foodImg1"></div>
+          <div class="sp2-foodTit1">겨울 방어</div>
+          <div class="sp2-foodInf1">
+            겨울 방어는 11월부터 2월까지 제철로, 고소하고 풍미 깊은 맛을
+            자랑하며, 신선한 방어회나 구이로 최고의 맛을 즐길 수 있습니다.
+          </div>
+        </div>
+        <div class="sp2-foodBox2">
+          <div class="sp2-foodImg2" id="su-sub1-sp2-foodImg2"></div>
+          <div class="sp2-foodTit2">곶감</div>
+          <div class="sp2-foodInf2">
+            곶감은 겨울철 대표 간식으로, 건조되어 단맛이 농축되고 쫄깃한 식감이
+            특징이며, 비타민 A와 C가 풍부해 건강에도 좋습니다.
+          </div>
+        </div>
+        <div class="sp2-foodBox3">
+          <div class="sp2-foodImg3" id="su-sub1-sp2-foodImg3"></div>
+          <div class="sp2-foodTit3">과메기</div>
+          <div class="sp2-foodInf3">
+            과메기는 동해안의 특산물로, 신선한 오징어를 염장해 건조시킨 후
+            짭짤한 맛과 쫄깃한 식감이 특징이며, 겨울철 술안주로 인기입니다.
+          </div>
+        </div>
+        <div class="sp2-foodBox4">
+          <div class="sp2-foodImg4" id="su-sub1-sp2-foodImg4"></div>
+          <div class="sp2-foodTit4">석화</div>
+          <div class="sp2-foodInf4">
+            석화는 겨울철 차가운 바닷물에서 자라 쫄깃하고 달콤한 맛이 특징이며,
+            신선도가 높고 풍미가 풍부해 생석화나 구이로 즐기기에 좋습니다.
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 봄에 열리는 축제 -->
+    <section class="sp2-section3">
+      <div class="sp2-sec3-title">겨울에 열리는 축제</div>
+      <div class="sp2-sec3-con">
+        <div class="sp2-sec3-con-img1" id="su-sp2-sec3-con-img1">
+          <div class="sp2-sec3-con-img1-opacity-con">
+            <div class="sp2-sec3-con-img1-opacity-con-in-con">
+              <span>Daegwallyeong Snow Festival</span>
+              <span>마법 같은 겨울 풍경</span>
+              <span>대관령 눈꽃 축제</span>
+              <span>2024.01.24 - 2024.02.02</span>
+            </div>
+          </div>
+        </div>
+        <div class="sp2-sec3-con-img2" id="su-sp2-sec3-con-img2">
+          <div class="sp2-sec3-con-img1-opacity-con">
+            <div class="sp2-sec3-con-img1-opacity-con-in-con">
+              <span>Haeundae Light Festival</span>
+              <span>겨울 바다에 비친 수 많은 불빛</span>
+              <span>해운대 빛 축제</span>
+              <span>2024.12.14 ~ 2024.02.2</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- -------------------------------- -->
+    <!-- 탭메뉴 -->
+    <section id="hi-mainMenu-web" class="hideMenu">
+      <div>
+        <div class="hi-menuBoxTop">
+          <div>
+            <a href="../index.html"
+              ><img src="../img/icon/logo_white.png" alt="온누리 로고"
+            /></a>
+          </div>
+          <span>Menu</span>
+          <div id="hi-menuBox-Close">
+            <img src="../img/icon/close.png" alt="close menu" />
+          </div>
+        </div>
+        <div class="hi-menuBox">
+          <div class="hi-menuSub">
+            <div><a href="../subpage/spring.html">Spring</a></div>
+            <div>
+              <ul>
+                <li><a href="../subpage/spring.html">한국의 봄</a></li>
+                <li><a href="../subpage/spring_sub1.html">봄날의 즐거움</a></li>
+                <li><a href="../subpage/spring_sub2.html">갤러리</a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- 겨울 -->
+          <div class="hi-menuSub">
+            <div><a href="../subpage/summer.html">Summer</a></div>
+            <div>
+              <ul>
+                <li><a href="../subpage/summer.html">한국의 여름</a></li>
+                <li><a href="../subpage/summer_sub1.html">여름의 즐거움</a></li>
+                <li><a href="../subpage/summer_sub2.html">갤러리</a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- 가을 -->
+          <div class="hi-menuSub">
+            <div><a href="../subpage/autumn.html">Autumn</a></div>
+            <div>
+              <ul>
+                <li><a href="../subpage/autumn.html">한국의 가을</a></li>
+                <li><a href="../subpage/autumn_sub1.html">가을의 즐거움</a></li>
+                <li><a href="../subpage/autumn_sub2.html">갤러리</a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- 겨울 -->
+          <div class="hi-menuSub">
+            <div><a href="../subpage/winter.html">Winter</a></div>
+            <div>
+              <ul>
+                <li><a href="../subpage/winter.html">한국의 겨울</a></li>
+                <li>
+                  <a href="../subpage/winter_sub1.html">겨울날의 즐거움</a>
+                </li>
+                <li><a href="../subpage/winter_sub2.html">갤러리</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- 모바일 버전 메뉴 -->
+    <section id="hi-mainMenu-app" class="hideMenu">
+      <div class="hi-mainMenu-appBox">
+        <div class="hi-mainMenu-appBoxtop">
+          <div>
+            <a href="../index.html"
+              ><img src="../img/icon/logo_white.png" alt="온누리 로고"
+            /></a>
+          </div>
+          <span>Menu</span>
+          <div id="hi-accordionMenu-Close">
+            <img src="../img/icon/close.png" alt="close menu" />
+          </div>
+        </div>
+        <!-- 봄 -->
+        <div class="hi-accordionMenu">&nbsp;&nbsp;Spring</div>
+        <div class="hi-appMenu">
+          <p><a href="../subpage/spring.html">한국의 봄</a></p>
+          <p><a href="../subpage/spring_sub1.html">봄날의 즐거움</a></p>
+          <p><a href="../subpage/spring_sub2.html">갤러리</a></p>
+        </div>
+        <!-- 겨울 -->
+        <div class="hi-accordionMenu">&nbsp;&nbsp;Summer</div>
+        <div class="hi-appMenu">
+          <p><a href="../subpage/summer.html">한국의 겨울</a></p>
+          <p><a href="../subpage/summer_sub1.html">겨울의 즐거움</a></p>
+          <p><a href="../subpage/summer_sub2.html">갤러리</a></p>
+        </div>
+        <!-- 가을 -->
+        <div class="hi-accordionMenu">&nbsp;&nbsp;Autumn</div>
+        <div class="hi-appMenu">
+          <p><a href="../subpage/autumn.html">한국의 가을</a></p>
+          <p><a href="../subpage/autumn_sub1.html">가을의 즐거움</a></p>
+          <p><a href="../subpage/autumn_sub2.html">갤러리</a></p>
+        </div>
+        <!-- 겨울 -->
+        <div class="hi-accordionMenu">&nbsp;&nbsp;Winter</div>
+        <div class="hi-appMenu">
+          <p><a href="../subpage/spring.html">한국의 겨울</a></p>
+          <p><a href="../subpage/spring.html">겨울날의 즐거움</a></p>
+          <p><a href="../subpage/spring.html">갤러리</a></p>
+        </div>
+      </div>
+    </section>
+    <!-- ------------------------------------- -->
+  </body>
+  <script src="../js/subMenuTab.js"></script>
 </html>
