--- a/subpage/spring_sub2.html
+++ b/subpage/spring_sub2.html
@@ -9,7 +9,7 @@
     <title>갤러리</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="../style/season-layout.css" />
-    <link rel="stylesheet" href="../style/season-sub.css" />
+    <link rel="stylesheet" href="../style/springSub.css" />
     <link rel="stylesheet" href="../style/style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
@@ -36,14 +36,26 @@
 
       <!-- 본문 -->
       <div class="sp3-galBox1">
-        <div class="sp3-galImgBox" data-index="1"></div>
-        <div class="sp3-galImgBox" data-index="2"></div>
-        <div class="sp3-galImgBox" data-index="3"></div>
+        <div class="sp3-galImgBox" data-index="1">
+          <img src="../img/spring-sub1/springSub2-flower.jpg" alt="봄풍경">
+        </div>
+        <div class="sp3-galImgBox" data-index="2">
+          <img src="../img/spring-sub1/springSub2-3.1.jpg" alt="3.1절">
+        </div>
+        <div class="sp3-galImgBox" data-index="3">
+          <img src="../img/spring-sub1/springSub2-nari.jpg" alt="개나리">
+        </div>
       </div>
       <div class="sp3-galBox2">
-        <div class="sp3-galImgBox" data-index="4"></div>
-        <div class="sp3-galImgBox" data-index="5"></div>
-        <div class="sp3-galImgBox" data-index="6"></div>
+        <div class="sp3-galImgBox" data-index="4">
+          <img src="../img/spring-sub1/springSub2-sanNflower.jpg" alt="산">
+        </div>
+        <div class="sp3-galImgBox" data-index="5">
+          <img src="../img/spring-sub1/springSub2-fam.jpg" alt="놀이공원">
+        </div>
+        <div class="sp3-galImgBox" data-index="6">
+          <img src="../img/spring-sub1/springSub2-school.jpg" alt="벚꽃과 학교">
+        </div>
       </div>
     </section>
     <!-- -------------------------------- -->
