--- a/subpage/summer_sub1.html
+++ b/subpage/summer_sub1.html
@@ -6,7 +6,252 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0,minimum-scale=1.0"
     />
-    <title>Document</title>
+    <title>여름의 즐거움</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="../style/summer.css" />
+    <link rel="stylesheet" href="../style/season-layout.css" />
+
+    <link rel="stylesheet" href="../style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="sp1-nav">
+        <div class="sp1-imgLogo">
+          <a href="../index.html">
+            <div class="onuriLogo"></div>
+          </a>
+        </div>
+        <ul class="sp1-navMenu">
+          <li><a class="mb-br" href="./summer.html">한국의 여름</a></li>
+          <li><a class="mb-br" href="./summer_sub1.html">여름의 즐거움</a></li>
+          <li><a class="mb-br" href="./summer_sub2.html">갤러리</a></li>
+        </ul>
+        <div class="sp1-hamBar"></div>
+      </div>
+    </header>
+    <!-- 봄에 가면 좋은 관광지 -->
+    <section class="sp2-section1">
+      <!-- 제목 -->
+      <div class="sp2-subTit1">여름에 가면 좋은 관광지</div>
+      <!-- 본문 -->
+      <div class="sp2-mainBox1">
+        <div class="sp2-subBox1">
+          <div class="sp2-subImg1" id="su-sub1-sp2-subImg1"></div>
+          <div class="sp2-subTri1"></div>
+          <div class="sp2-subInf1">
+            <span class="sp2-subInf-span">롯데월드</span>
+            롯데월드 어드벤처 부산은 다양한
+            <br class="sub-hi" />놀이기구와 키즈존 워터라이드
+            <br class="sub-hi" />등이 있는 대규모 테마파크입니다.
+          </div>
+        </div>
+        <div class="sp2-subBox2">
+          <div class="sp2-subInf2">
+            <span class="sp2-subInf-span">삼척 솔비치</span>
+            삼척 쏠비치는 산토리니를 연상케 <br class="sub-hi" />하는 숙소로,
+            해변과 관광지 접근성<br class="sub-hi" />이 좋아 여름 휴가에
+            적합합니다.
+          </div>
+          <div class="sp2-subTri2"></div>
+          <div class="sp2-subImg2" id="su-sub1-sp2-subImg2"></div>
+        </div>
+        <div class="sp2-subBox3">
+          <div class="sp2-subImg3" id="su-sub1-sp2-subImg3"></div>
+          <div class="sp2-subTri3"></div>
+          <div class="sp2-subInf3">
+            <span class="sp2-subInf-span">시그니엘 부산</span>
+            시그니엘 부산은 해운대 오션뷰와<br class="sub-hi" />
+            명소 접근성이 뛰어나 고급스러운<br class="sub-hi" />
+            호캉스를 즐기기에 좋습니다.
+          </div>
+        </div>
+        <div class="sp2-subBox4">
+          <div class="sp2-subInf4">
+            <span class="sp2-subInf-span">스누피가든</span>
+            스누피가든은 제주에서 자연과<br class="sub-hi" />
+            피너츠 캐릭터를 통해 휴식과 위로를 <br class="sub-hi" />경험할 수
+            있는 테마 가든입니다.
+          </div>
+          <div class="sp2-subTri4"></div>
+          <div class="sp2-subImg4" id="su-sub1-sp2-subImg4"></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 이 계절에 먹으면 좋은 음식 -->
+    <section class="sp2-section2">
+      <!-- 제목 -->
+      <div class="sp2-subTit2">여름에 먹으면 좋은 음식</div>
+      <!-- 본문 -->
+      <div class="sp2-mainBox2">
+        <div class="sp2-foodBox1">
+          <div class="sp2-foodImg1" id="su-sub1-sp2-foodImg1"></div>
+          <div class="sp2-foodTit1">콩국수</div>
+          <div class="sp2-foodInf1">
+            콩국수는 여름철 별미로 콩을 갈아 만든 콩국에 면을 삶아 먹는 음식으로
+            아주 고소하며 진한 국물이 일품인 음식입니다.
+          </div>
+        </div>
+        <div class="sp2-foodBox2">
+          <div class="sp2-foodImg2" id="su-sub1-sp2-foodImg2"></div>
+          <div class="sp2-foodTit2">오리탕</div>
+          <div class="sp2-foodInf2">
+            오리탕은 다양한 채소와 함께 끓여 면연력 향상과 건강증진에 도움을
+            주어 기력 회복에 굉장히 좋은 음식입니다.
+          </div>
+        </div>
+        <div class="sp2-foodBox3">
+          <div class="sp2-foodImg3" id="su-sub1-sp2-foodImg3"></div>
+          <div class="sp2-foodTit3">삼계탕</div>
+          <div class="sp2-foodInf3">
+            삼계탕은 여름철 남녀노소 즐기는 대표적인 한국 전통 보양식으로,
+            한약재와 찹쌀을 넣어 푹 고아낸 이열치열 음식입니다.
+          </div>
+        </div>
+        <div class="sp2-foodBox4">
+          <div class="sp2-foodImg4" id="su-sub1-sp2-foodImg4"></div>
+          <div class="sp2-foodTit4">냉면</div>
+          <div class="sp2-foodInf4">
+            냉면은 차가운 육수와 고명으로 즐기는 시원하고 개운한 맛의 전통 한국
+            음식으로, 여름철 입맛을 돋우는 대표적인 인기 보양식입니다.
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 봄에 열리는 축제 -->
+    <section class="sp2-section3">
+      <div class="sp2-sec3-title">여름에 열리는 축제</div>
+      <div class="sp2-sec3-con">
+        <div class="sp2-sec3-con-img1" id="su-sp2-sec3-con-img1">
+          <div class="sp2-sec3-con-img1-opacity-con">
+            <div class="sp2-sec3-con-img1-opacity-con-in-con">
+              <span>Pyeongchang Summer-Hunter Festival</span>
+              <span>평창</span>
+              <span>더위 사냥 축제</span>
+              <span>2024.07.26 - 2024.08.04</span>
+            </div>
+          </div>
+        </div>
+        <div class="sp2-sec3-con-img2" id="su-sp2-sec3-con-img2">
+          <div class="sp2-sec3-con-img1-opacity-con">
+            <div class="sp2-sec3-con-img1-opacity-con-in-con">
+              <span>Busan Sea Festival</span>
+              <span>부산</span>
+              <span>바다 축제</span>
+              <span>2024.07.27 - 2024.08.05</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- -------------------------------- -->
+    <!-- 탭메뉴 -->
+    <section id="hi-mainMenu-web" class="hideMenu">
+      <div>
+        <div class="hi-menuBoxTop">
+          <div>
+            <a href="../index.html"
+              ><img src="../img/icon/logo_white.png" alt="온누리 로고"
+            /></a>
+          </div>
+          <span>Menu</span>
+          <div id="hi-menuBox-Close">
+            <img src="../img/icon/close.png" alt="close menu" />
+          </div>
+        </div>
+        <div class="hi-menuBox">
+          <div class="hi-menuSub">
+            <div><a href="../subpage/spring.html">Spring</a></div>
+            <div>
+              <ul>
+                <li><a href="../subpage/spring.html">한국의 봄</a></li>
+                <li><a href="../subpage/spring_sub1.html">봄날의 즐거움</a></li>
+                <li><a href="../subpage/spring_sub2.html">갤러리</a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- 여름 -->
+          <div class="hi-menuSub">
+            <div><a href="../subpage/summer.html">Summer</a></div>
+            <div>
+              <ul>
+                <li><a href="../subpage/summer.html">한국의 여름</a></li>
+                <li><a href="../subpage/summer_sub1.html">여름의 즐거움</a></li>
+                <li><a href="../subpage/summer_sub2.html">갤러리</a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- 가을 -->
+          <div class="hi-menuSub">
+            <div><a href="../subpage/autumn.html">Autumn</a></div>
+            <div>
+              <ul>
+                <li><a href="../subpage/autumn.html">한국의 가을</a></li>
+                <li><a href="../subpage/autumn_sub1.html">가을의 즐거움</a></li>
+                <li><a href="../subpage/autumn_sub2.html">갤러리</a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- 겨울 -->
+          <div class="hi-menuSub">
+            <div><a href="../subpage/winter.html">Winter</a></div>
+            <div>
+              <ul>
+                <li><a href="../subpage/winter.html">한국의 겨울</a></li>
+                <li><a href="../subpage/winter_sub1.html">겨울날의 즐거움</a></li>
+                <li><a href="../subpage/winter_sub2.html">갤러리</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- 모바일 버전 메뉴 -->
+    <section id="hi-mainMenu-app" class="hideMenu">
+      <div class="hi-mainMenu-appBox">
+        <div class="hi-mainMenu-appBoxtop">
+          <div>
+            <a href="../index.html"
+              ><img src="../img/icon/logo_white.png" alt="온누리 로고"
+            /></a>
+          </div>
+          <span>Menu</span>
+          <div id="hi-accordionMenu-Close">
+            <img src="../img/icon/close.png" alt="close menu" />
+          </div>
+        </div>
+        <!-- 봄 -->
+        <div class="hi-accordionMenu">&nbsp;&nbsp;Spring</div>
+        <div class="hi-appMenu">
+          <p><a href="../subpage/spring.html">한국의 봄</a></p>
+          <p><a href="../subpage/spring_sub1.html">봄날의 즐거움</a></p>
+          <p><a href="../subpage/spring_sub2.html">갤러리</a></p>
+        </div>
+        <!-- 여름 -->
+        <div class="hi-accordionMenu">&nbsp;&nbsp;Summer</div>
+        <div class="hi-appMenu">
+          <p><a href="../subpage/summer.html">한국의 여름</a></p>
+          <p><a href="../subpage/summer_sub1.html">여름의 즐거움</a></p>
+          <p><a href="../subpage/summer_sub2.html">갤러리</a></p>
+        </div>
+        <!-- 가을 -->
+        <div class="hi-accordionMenu">&nbsp;&nbsp;Autumn</div>
+        <div class="hi-appMenu">
+          <p><a href="../subpage/autumn.html">한국의 가을</a></p>
+          <p><a href="../subpage/autumn_sub1.html">가을의 즐거움</a></p>
+          <p><a href="../subpage/autumn_sub2.html">갤러리</a></p>
+        </div>
+        <!-- 겨울 -->
+        <div class="hi-accordionMenu">&nbsp;&nbsp;Winter</div>
+        <div class="hi-appMenu">
+          <p><a href="../subpage/spring.html">한국의 겨울</a></p>
+          <p><a href="../subpage/spring.html">겨울날의 즐거움</a></p>
+          <p><a href="../subpage/spring.html">갤러리</a></p>
+        </div>
+      </div>
+    </section>
+    <!-- ------------------------------------- -->
+  </body>
+  <script src="../js/subMenuTab.js"></script>
 </html>
