--- a/subpage/spring.html
+++ b/subpage/spring.html
@@ -55,12 +55,12 @@
           <div class="sp1-sec2-line"></div>
           <div class="sp1-sec2-title-main">봄</div>
           <div class="sp1-sec2-content">
-            봄은 사계절 중 첫번째 계절로, 
-            <br class="mb-br" />꽃들이 피어나고, 나무들이 싹을 틔우는 시기입니다.
-            <br class="mb-br" />따뜻한 날씨 속에서 다채로운 봄 풍경과 
-            <br class="mb-br" />활동을 만끽할 수 있는 시기입니다.
+            봄은 사계절 중 첫번째 계절로,
+            <br class="mb-br" />꽃들이 피어나고, 나무들이 싹을 틔우는
+            시기입니다. <br class="mb-br" />따뜻한 날씨 속에서 다채로운 봄
+            풍경과 <br class="mb-br" />활동을 만끽할 수 있는 시기입니다.
             <br class="mb-br" />
-            <br class="mb-br" />추운 겨울에서 점차 따스해지는 시기이나, 
+            <br class="mb-br" />추운 겨울에서 점차 따스해지는 시기이나,
             <br class="mb-br" />일교차가 크고 갑자기 추워지는 꽃샘추위가 오는
             <br class="mb-br" />변덕스러움을 가지고 있기도 한 계절입니다.
           </div>
@@ -88,10 +88,12 @@
           </div>
         </div>
         <div class="sp1-sec3-text">
-          기상학적으로 9일간 일평균기온의 이동 평균이 5도 이상으로 <br>
-          9일 동안 올라간 후 떨어지지 않으면 그 5도 이상 올라간 첫 날부터<br> 봄이 왔다고 말할수 있다.<br>
-          한국의 봄은 기온에 따라 초봄, 봄, 늦봄으로 구분할수 있으며, <br>
-          갑자기 추위가 찾아오기도 하는 변덕적인 기후와 <br>큰 일교차를 가지고 있다는 특징이 있다.
+          기상학적으로 9일간 일평균기온의 이동 평균이 5도 이상으로 <br />
+          9일 동안 올라간 후 떨어지지 않으면 그 5도 이상 올라간 첫 날부터<br />
+          봄이 왔다고 말할수 있다.<br />
+          한국의 봄은 기온에 따라 초봄, 봄, 늦봄으로 구분할수 있으며, <br />
+          갑자기 추위가 찾아오기도 하는 변덕적인 기후와 <br />큰 일교차를 가지고
+          있다는 특징이 있다.
         </div>
       </div>
       <div class="sp1-sec3-graph">
@@ -181,9 +183,11 @@
             <div><a href="../subpage/winter.html">Winter</a></div>
             <div>
               <ul>
-                <li><a href="../subpage/spring.html">한국의 겨울</a></li>
-                <li><a href="../subpage/spring.html">겨울날의 즐거움</a></li>
-                <li><a href="../subpage/spring.html">갤러리</a></li>
+                <li><a href="../subpage/winter.html">한국의 겨울</a></li>
+                <li>
+                  <a href="../subpage/winter_sub1.html">겨울날의 즐거움</a>
+                </li>
+                <li><a href="../subpage/winter_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -228,9 +232,9 @@
         <!-- 겨울 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Winter</div>
         <div class="hi-appMenu">
-          <p><a href="../subpage/spring.html">한국의 겨울</a></p>
-          <p><a href="../subpage/spring.html">겨울날의 즐거움</a></p>
-          <p><a href="../subpage/spring.html">갤러리</a></p>
+          <p><a href="../subpage/winter.html">한국의 겨울</a></p>
+          <p><a href="../subpage/winter_sub1.html">겨울날의 즐거움</a></p>
+          <p><a href="../subpage/winter_sub2.html">갤러리</a></p>
         </div>
       </div>
     </section>
