--- a/subpage/summer.html
+++ b/subpage/summer.html
@@ -185,9 +185,11 @@
             <div><a href="../subpage/winter.html">Winter</a></div>
             <div>
               <ul>
-                <li><a href="../subpage/spring.html">한국의 겨울</a></li>
-                <li><a href="../subpage/spring.html">겨울날의 즐거움</a></li>
-                <li><a href="../subpage/spring.html">갤러리</a></li>
+                <li><a href="../subpage/winter.html">한국의 겨울</a></li>
+                <li>
+                  <a href="../subpage/winter_sub1.html">겨울날의 즐거움</a>
+                </li>
+                <li><a href="../subpage/winter_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -232,9 +234,9 @@
         <!-- 겨울 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Winter</div>
         <div class="hi-appMenu">
-          <p><a href="../subpage/spring.html">한국의 겨울</a></p>
-          <p><a href="../subpage/spring.html">겨울날의 즐거움</a></p>
-          <p><a href="../subpage/spring.html">갤러리</a></p>
+          <p><a href="../subpage/winter.html">한국의 겨울</a></p>
+          <p><a href="../subpage/winter_sub1.html">겨울날의 즐거움</a></p>
+          <p><a href="../subpage/winter_sub2.html">갤러리</a></p>
         </div>
       </div>
     </section>
