adit and add save

--- a/subpage/spring_sub2.html
+++ b/subpage/spring_sub2.html
@@ -43,7 +43,7 @@
           <img src="../img/spring-sub1/springSub2-3.1.jpg" alt="3.1절">
         </div>
         <div class="sp3-galImgBox" data-index="3">
-          <img src="../img/spring-sub1/springSub2-nari.jpg" alt="개나리">
+          <img src="../img/spring-sub1/springSub2-nari.jpg" alt="개나리와 학교">
         </div>
       </div>
       <div class="sp3-galBox2">
