--- a/subpage/autumn_sub1.html
+++ b/subpage/autumn_sub1.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../style/season-layout.css" />
     <link rel="stylesheet" href="../style/autumn.css" />
     <link rel="stylesheet" href="../style/style.css" />
+    <link rel="icon" href="../favicon/au_favicon.ico" />
   </head>
   <body>
     <header>
