--- a/subpage/autumn_sub2.html
+++ b/subpage/autumn_sub2.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../style/style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <link rel="icon" href="../favicon/au_favicon.ico" />
   </head>
   <body>
     <header>
