--- a/subpage/autumn.html
+++ b/subpage/autumn.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="../style/autumn.css" />
+    <link rel="icon" href="../favicon/au_favicon.ico" />
   </head>
   <body class="autumn">
     <header>
