--- a/subpage/spring_sub2.html
+++ b/subpage/spring_sub2.html
@@ -37,24 +37,30 @@
       <!-- 본문 -->
       <div class="sp3-galBox1">
         <div class="sp3-galImgBox" data-index="1">
-          <img src="../img/spring-sub1/springSub2-flower.jpg" alt="봄풍경">
+          <img src="../img/spring-sub1/springSub2-flower.jpg" alt="봄풍경" />
         </div>
         <div class="sp3-galImgBox" data-index="2">
-          <img src="../img/spring-sub1/springSub2-3.1.jpg" alt="3.1절">
+          <img src="../img/spring-sub1/springSub2-3.1.jpg" alt="3.1절" />
         </div>
         <div class="sp3-galImgBox" data-index="3">
-          <img src="../img/spring-sub1/springSub2-nari.jpg" alt="개나리와 학교">
+          <img
+            src="../img/spring-sub1/springSub2-nari.jpg"
+            alt="개나리와 학교"
+          />
         </div>
       </div>
       <div class="sp3-galBox2">
         <div class="sp3-galImgBox" data-index="4">
-          <img src="../img/spring-sub1/springSub2-sanNflower.jpg" alt="산">
+          <img src="../img/spring-sub1/springSub2-sanNflower.jpg" alt="산" />
         </div>
         <div class="sp3-galImgBox" data-index="5">
-          <img src="../img/spring-sub1/springSub2-fam.jpg" alt="놀이공원">
+          <img src="../img/spring-sub1/springSub2-fam.jpg" alt="놀이공원" />
         </div>
         <div class="sp3-galImgBox" data-index="6">
-          <img src="../img/spring-sub1/springSub2-school.jpg" alt="벚꽃과 학교">
+          <img
+            src="../img/spring-sub1/springSub2-school.jpg"
+            alt="벚꽃과 학교"
+          />
         </div>
       </div>
     </section>
@@ -112,7 +118,9 @@
             <div>
               <ul>
                 <li><a href="../subpage/winter.html">한국의 겨울</a></li>
-                <li><a href="../subpage/winter_sub1.html">겨울날의 즐거움</a></li>
+                <li>
+                  <a href="../subpage/winter_sub1.html">겨울날의 즐거움</a>
+                </li>
                 <li><a href="../subpage/winter_sub2.html">갤러리</a></li>
               </ul>
             </div>
@@ -164,6 +172,34 @@
         </div>
       </div>
     </section>
+    <footer>
+      <span>이 페이지는 학습 및 포트폴리오를 위해 제작되었습니다</span>
+      <div class="hi-footerBox">
+        <div class="hi-figmaBox">
+          <a
+            href="https://www.figma.com/design/599GWSnvNaoEHdQ0H3iW6G/TouristWebsite_Design?node-id=0-1&p=f&t=E0qoQzzdOEmYrA6V-0"
+            target="_blank"
+          >
+            <img
+              src="../img/icon/linkImg.png"
+              alt="피그마 링크"
+              class="hi-footerIcon"
+            />
+            <span class="hi-footerSubtxt">Page design with Figma</span>
+          </a>
+        </div>
+        <div class="hi-downBox">
+          <a href="../img/기획서양식_저기만이기조.pdf" download>
+            <img
+              src="../img/icon/downloadImg.png"
+              alt="기획서 다운로드"
+              class="hi-footerIcon"
+            />
+            <span class="hi-footerSubtxt">기획서 다운로드 하기</span>
+          </a>
+        </div>
+      </div>
+    </footer>
     <!-- ------------------------------------- -->
 
     <!-- 모달 -->
