--- a/subpage/spring.html
+++ b/subpage/spring.html
@@ -124,7 +124,7 @@
         </li>
         <li>
           <ul class="sp1-sec4-card">
-            <li class="sp1-sec4-card-even"  id="sp1-sec4-card-img4"></li>
+            <li class="sp1-sec4-card-even" id="sp1-sec4-card-img4"></li>
             <li>사랑스러운 코디</li>
           </ul>
         </li>
@@ -239,28 +239,35 @@
       </div>
     </section>
     <!-- ------------------------------------- -->
-        <!-- footer 부분 -->
-        <footer>
-          <span>이 페이지는 학습 및 포트폴리오를 위해 제작되었습니다</span>
-          <div class="hi-footerBox">
-            <div class="hi-figmaBox">
-              <a href="https://www.figma.com/design/599GWSnvNaoEHdQ0H3iW6G/TouristWebsite_Design?node-id=0-1&p=f&t=E0qoQzzdOEmYrA6V-0" target="_blank">
-                <img
-                  src="../img/icon/linkImg.png"
-                  alt="피그마 링크"
-                  class="hi-footerIcon"
-                />
-                <span class="hi-footerSubtxt">Page design with Figma</span>
-              </a>
-            </div>
-            <div class="hi-downBox">
-              <a href="../img/기획서양식_저기만이기조.pdf" download>
-                <img src="../img/icon/downloadImg.png" alt="기획서 다운로드" class="hi-footerIcon" />
-                <span class="hi-footerSubtxt">기획서 다운로드 하기</span>
-              </a>
-            </div>
-          </div>
-        </footer>
+    <!-- footer 부분 -->
+    <footer>
+      <span>이 페이지는 학습 및 포트폴리오를 위해 제작되었습니다</span>
+      <div class="hi-footerBox">
+        <div class="hi-figmaBox">
+          <a
+            href="https://www.figma.com/design/599GWSnvNaoEHdQ0H3iW6G/TouristWebsite_Design?node-id=0-1&p=f&t=E0qoQzzdOEmYrA6V-0"
+            target="_blank"
+          >
+            <img
+              src="../img/icon/linkImg.png"
+              alt="피그마 링크"
+              class="hi-footerIcon"
+            />
+            <span class="hi-footerSubtxt">Page design with Figma</span>
+          </a>
+        </div>
+        <div class="hi-downBox">
+          <a href="../img/기획서양식_저기만이기조.pdf" download>
+            <img
+              src="../img/icon/downloadImg.png"
+              alt="기획서 다운로드"
+              class="hi-footerIcon"
+            />
+            <span class="hi-footerSubtxt">기획서 다운로드 하기</span>
+          </a>
+        </div>
+      </div>
+    </footer>
     <script src="../js/canvas.js"></script>
     <script src="../js/spring.js"></script>
     <script src="../js/subMenuTab.js"></script>
