--- a/subpage/spring.html
+++ b/subpage/spring.html
@@ -8,6 +8,7 @@
     />
     <title>봄</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <link rel="icon" href="../favicon/sp_favicon.ico" />
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="../style/spring.css" />
   </head>
