--- a/subpage/spring_sub2.html
+++ b/subpage/spring_sub2.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../style/season-layout.css" />
     <link rel="stylesheet" href="../style/springSub.css" />
     <link rel="stylesheet" href="../style/style.css" />
+    <link rel="icon" href="../favicon/sp_favicon.ico" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
