--- a/subpage/summer.html
+++ b/subpage/summer.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="../style/season-layout.css" />
     <link rel="stylesheet" href="../style/summer.css" />
+    <link rel="icon" href="../favicon/su_favicon.ico" />
   </head>
   <body class="summer">
     <header>
