--- a/subpage/winter.html
+++ b/subpage/winter.html
@@ -8,6 +8,7 @@
     />
     <title>겨울</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <link rel="icon" href="../favicon/wi.ico" />
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="../style/season-layout.css" />
     <link rel="stylesheet" href="../style/winter.css" />
