--- a/subpage/winter_sub2.html
+++ b/subpage/winter_sub2.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../style/winter.css  " />
     <link rel="stylesheet" href="../style/season-sub.css" />
     <link rel="stylesheet" href="../style/style.css" />
+    <link rel="icon" href="../favicon/wi.ico" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
