--- a/subpage/summer_sub1.html
+++ b/subpage/summer_sub1.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="../style/summer.css" />
     <link rel="stylesheet" href="../style/season-layout.css" />
-
+    <link rel="icon" href="../favicon/su_favicon.ico" />
     <link rel="stylesheet" href="../style/style.css" />
   </head>
   <body>
