--- a/subpage/autumn_sub1.html
+++ b/subpage/autumn_sub1.html
@@ -39,7 +39,7 @@
       <div class="sp2-mainBox1">
         <div class="sp2-subBox1">
           <div class="sp2-subImg1">
-            <div class="sp2-tr-design"></div>
+            <div></div>
           </div>
           <div class="sp2-subTri1"></div>
           <div class="sp2-subInf1">
@@ -60,12 +60,12 @@
           </div>
           <div class="sp2-subTri2"></div>
           <div class="sp2-subImg2">
-            <div class="sp2-tr-design on"></div>
+            <div></div>
           </div>
         </div>
         <div class="sp2-subBox3">
           <div class="sp2-subImg3">
-            <div class="sp2-tr-design"></div>
+            <div></div>
           </div>
           <div class="sp2-subTri3"></div>
           <div class="sp2-subInf3">
@@ -88,7 +88,7 @@
           </div>
           <div class="sp2-subTri4"></div>
           <div class="sp2-subImg4">
-            <div class="sp2-tr-design on"></div>
+            <div></div>
           </div>
         </div>
       </div>
